# homecloud-sdk

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml
homecloud/: __init__.py
homecloud_core/: __init__.py  account.py  async_context.py  async_transport.py  config.py  context.py  defaults.py  env.py  errors.py  http_helpers.py  mfa.py  progress_reader.py  session.py  signing.py  so_paths.py  transfer_state.py  transport.py
homecloud_sdk/: __init__.py  async_client.py  async_services.py  client.py  mq_helpers.py  services.py  so_parallel.py
js/: PARITY.md  README.md  package.json
js/src/: client.js  credentials.js  defaults.js  errors.js  index.d.ts  index.js  mail.js  management.js  mq.js  secrets.js  signing.js  so.js
js/test/: mq_batch.test.js  signing.test.js
scripts/: bump-version.sh  verify_service_account_flow.py
tests/: conftest.py  test_async_head_object.py  test_auth_model.py  test_client.py  test_config.py  test_env_profile.py  test_errors.py  test_from_sts.py  test_functions_url.py  test_head_object.py  test_js_package.py  test_live_integration.py  test_mail_api.py  test_mq_batch.py  test_mq_runtime_ops.py  test_signing.py  test_so_paths.py  test_so_urls.py  test_transfer_state.py
