[project]
name = "homecloud-sdk"
version = "0.4.6"
description = "HomeCloud Python SDK and core client library"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "HomeCloud" }]
keywords = ["homecloud", "sdk", "object-storage", "mq"]
dependencies = [
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/HomeCloudLab/homecloud-sdk"
Documentation = "https://docs.holab.abrdns.com/sdk/"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["homecloud*", "homecloud_core*", "homecloud_sdk*"]

[tool.setuptools.package-data]
homecloud = ["py.typed"]
homecloud_core = ["py.typed"]
homecloud_sdk = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
